feat(backend): add review system, hierarchical category filtering, and medicine creation support